tests/NormalTests/paczka1/fuzzy1/77265539.err
Error in line 11: I9D0U9Gxy A985 -1,0
Error in line 7: LgmgMPL A985 28,5
Error in line 6: I9D0U9Gxy A985 48,5
Error in line 21: JxdeoCJp4N6 S868 54,0
Error in line 23: JxdeoCJp4N6 S862 81,0
Error in line 26: JxdeoCJp4N6 A153 67,6
Error in line 27: JxdeoCJp4N6 S862 8,3
Error in line 28: JxdeoCJp4N6 A153 40,7
Error in line 37: joqM S868 40,9
